// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) curation_reward 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
        fillRule="evenodd"
      />
      <path
        d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"
      />
      <path
        d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z"
      />
      <path
        d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Curation reward
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    17.241 HP
  </div>
  <div
    className="transaction-details"
  >
    <a
      href="/history/@user2/hquwxmvg"
      onClick={[Function]}
    >
      @
      user2
      /
      hquwxmvg
    </a>
  </div>
</div>
`;

exports[`(2) author_reward 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
        fillRule="evenodd"
      />
      <path
        d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"
      />
      <path
        d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z"
      />
      <path
        d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Author reward
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      4.174 HBD
    </span>
    <span
      className="number"
    >
      16.311 HP
       
    </span>
  </div>
  <div
    className="transaction-details"
  >
    <a
      href="/history/@user1/lorem-ipsum-dolor"
      onClick={[Function]}
    >
      @
      user1
      /
      lorem-ipsum-dolor
    </a>
  </div>
</div>
`;

exports[`(3) comment_benefactor_reward 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
        fillRule="evenodd"
      />
      <path
        d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"
      />
      <path
        d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z"
      />
      <path
        d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Comment benefactor reward
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      0.002 HP
       
    </span>
  </div>
  <div
    className="transaction-details"
  >
    <a
      href="/history/@xxxthorxxx/re-nonameslefttouse-2020530t135919321z"
      onClick={[Function]}
    >
      @
      xxxthorxxx
      /
      re-nonameslefttouse-2020530t135919321z
    </a>
  </div>
</div>
`;

exports[`(4) claim_reward_balance 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Claim rewards
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      0.414 HP
    </span>
  </div>
  <div
    className="transaction-details"
  />
</div>
`;

exports[`(5) transfer 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <div
      className="route flex"
    >
      <span
        className="two-user-avatar small"
        style={
          Object {
            "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/small)",
          }
        }
      />
      <span
        className="two-user-avatar small"
        style={
          Object {
            "backgroundImage": "url(https://images.ecency.com/u/user2/avatar/small)",
          }
        }
      />
    </div>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Transfer
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      192.425 HIVE
    </span>
  </div>
  <div
    className="transaction-details"
  >
    <span>
      lorem-ipsum-dolor
       
      <br />
       
      <br />
      <strong>
        @
        user1
      </strong>
       -&gt; 
      <strong>
        @
        user2
      </strong>
    </span>
  </div>
</div>
`;

exports[`(6) transfer_to_vesting 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <div
      className="route flex"
    >
      <span
        className="two-user-avatar small"
        style={
          Object {
            "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/small)",
          }
        }
      />
      <span
        className="two-user-avatar small"
        style={
          Object {
            "backgroundImage": "url(https://images.ecency.com/u/user2/avatar/small)",
          }
        }
      />
    </div>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Power up
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      82.203 HIVE
    </span>
  </div>
  <div
    className="transaction-details"
  >
    <span>
      <strong>
        @
        user1
      </strong>
       -&gt; 
      <strong>
        @
        user2
      </strong>
    </span>
  </div>
</div>
`;

exports[`(7) withdraw_vesting 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"
        fillRule="evenodd"
      />
      <path
        d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Power down
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      0.414 HP
    </span>
  </div>
  <div
    className="transaction-details"
  >
    <span>
      <strong>
        @
        user1
      </strong>
    </span>
  </div>
</div>
`;

exports[`(8) fill_order 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M3,15H21V13H3V15M3,19H21V17H3V19M3,11H21V9H3V11M3,5V7H21V5H3Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Open trade filled
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      foo
       = 
      bar
    </span>
  </div>
  <div
    className="transaction-details"
  />
</div>
`;

exports[`(9) producer_reward 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M14.79,10.62L3.5,21.9L2.1,20.5L13.38,9.21L14.79,10.62M19.27,7.73L19.86,7.14L19.07,6.35L19.71,5.71L18.29,4.29L17.65,4.93L16.86,4.14L16.27,4.73C14.53,3.31 12.57,2.17 10.47,1.37L9.64,3.16C11.39,4.08 13,5.19 14.5,6.5L14,7L17,10L17.5,9.5C18.81,11 19.92,12.61 20.84,14.36L22.63,13.53C21.83,11.43 20.69,9.47 19.27,7.73Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Producer reward
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    0.240 HP
  </div>
  <div
    className="transaction-details"
  />
</div>
`;

exports[`(10) interest 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M5,6H23V18H5V6M14,9A3,3 0 0,1 17,12A3,3 0 0,1 14,15A3,3 0 0,1 11,12A3,3 0 0,1 14,9M9,8A2,2 0 0,1 7,10V14A2,2 0 0,1 9,16H19A2,2 0 0,1 21,14V10A2,2 0 0,1 19,8H9M1,10H3V20H19V22H1V10Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Interest
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      0.570 HBD
    </span>
  </div>
  <div
    className="transaction-details"
  />
</div>
`;

exports[`(11) transfer_to_savings 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <div
      className="route flex"
    >
      <span
        className="two-user-avatar small"
        style={
          Object {
            "backgroundImage": "url(https://images.ecency.com/u/talhasch/avatar/small)",
          }
        }
      />
      <span
        className="two-user-avatar small"
        style={
          Object {
            "backgroundImage": "url(https://images.ecency.com/u/talhasch/avatar/small)",
          }
        }
      />
    </div>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Transfer to savings
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      0.001 HIVE
    </span>
  </div>
  <div
    className="transaction-details"
  >
    <span>
      test memo
       
      <br />
       
      <br />
      <strong>
        @
        talhasch
      </strong>
       -&gt; 
      <strong>
        @
        talhasch
      </strong>
    </span>
  </div>
</div>
`;

exports[`(12) fill_convert_request 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M3,15H21V13H3V15M3,19H21V17H3V19M3,11H21V9H3V11M3,5V7H21V5H3Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Convert fulfilled
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      1.507 HBD
       = 
      10.920 HIVE
    </span>
  </div>
  <div
    className="transaction-details"
  />
</div>
`;

exports[`(13) cancel_transfer_from_savings 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Cancel transfer from savings
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  />
  <div
    className="transaction-details"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "From: <strong>@foo</strong> <br /> Request id: <strong>1612448772</strong>",
        }
      }
    />
  </div>
</div>
`;

exports[`(14) return_vesting_delegation 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.5 10a.5.5 0 0 1-.5-.5v-8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 0 0 1h2A1.5 1.5 0 0 0 14 9.5v-8A1.5 1.5 0 0 0 12.5 0h-9A1.5 1.5 0 0 0 2 1.5v8A1.5 1.5 0 0 0 3.5 11h2a.5.5 0 0 0 0-1h-2z"
        fillRule="evenodd"
      />
      <path
        d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Return delegations
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    1.965 HP
  </div>
  <div
    className="transaction-details"
  />
</div>
`;

exports[`(15) proposal_pay 1`] = `
<div
  className="transaction-list-item"
>
  <div
    className="transaction-icon"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="transaction-title"
  >
    <div
      className="transaction-name"
    >
      Proposal pay
    </div>
    <div
      className="transaction-date"
    >
      2 hours ago
    </div>
  </div>
  <div
    className="transaction-numbers"
  >
    <span
      className="number"
    >
      14.560 HBD
    </span>
  </div>
  <div
    className="transaction-details"
  />
</div>
`;

exports[`(30) fallback 1`] = `
<div
  className="transaction-list-item transaction-list-item-raw"
>
  <div
    className="raw-code"
  >
    {"trx_id":"0x14123213","type":"unknown_operation"}
  </div>
</div>
`;
